--- a/pom.xml
+++ b/pom.xml
@@ -97,13 +97,13 @@
 	    <repository>
 	      <id>nexus</id>
 	      <name>Mithun Technologies Releases Nexus Repository</name>
-	      <url>http://13.233.125.95:8081//mithuntechnologies/repository/canarabank-releases/</url>
+	      <url>http://13.233.125.95:8081/repository/facebook-releases/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
 	      <name>Mithun Technologies Snapshot Nexus Repository </name>
-	      <url>http://172.31.7.147:9980/mithuntechnologies/repository/canarabank-snapshot/</url>
+	      <url>http://13.233.125.95:8081/repository/facebook-snapshot//url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
